--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 AI_API_KEY=your_text_model_api_key
-AI_BASE_URL=https://api.deepseek.com/v1/chat/completions
-AI_CHAT_MODEL=deepseek-chat
+AI_BASE_URL=https://open.bigmodel.cn/api/paas/v4/chat/completions
+AI_CHAT_MODEL=glm-4
 AI_MAX_TOKENS=2000
 
 # Optional image settings
