--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-AI_API_KEY=your_text_model_api_key
-AI_BASE_URL=https://open.bigmodel.cn/api/paas/v4/chat/completions
-AI_CHAT_MODEL=glm-4
+AI_API_KEY=your_ark_api_key
+AI_BASE_URL=https://ark.cn-beijing.volces.com/api/v3/chat/completions
+AI_CHAT_MODEL=ep-xxxxxxxxxxxxxxxx
 AI_MAX_TOKENS=2000
 
 # Optional image settings
